[package]
name = "coding-fighters-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
dotenv = "0.15.0"
http = "1.0.0"
testcontainers = "0.15.0"
testcontainers-rs = "0.0.1"
testcontainers-rs-images = "0.0.1"
serial_test = "2.0.0"
env_logger = "0.10.1"
log = "0.4.20"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features=["env-filter", "json", "registry", "smallvec"] }
uuid = "1.8.0"
